--- a/reserve.html
+++ b/reserve.html
@@ -111,14 +111,18 @@
 	    $.post(currentURL + "/api/tables", newReservation,
 	    function(data){
 
+			
+			console.log(data)
+
 	    	// If a table is available... tell user they are booked.
 	    	if(data == true){
-	    		alert("Yay! You are officially booked!")
+				alert("Yay! You are officially booked!")
 	    	}
 
 	    	// If a table is available... tell user they on the waiting list.
 	    	if(data == false){
-	    		alert("Sorry you are on the wait list")
+				alert("Sorry you are on the wait list")
+				console.log("This is working but there's no room");
 	    	}
 
 	    	// Clear the form when submitting
