--- a/tables.html
+++ b/tables.html
@@ -146,16 +146,28 @@
 	function clearTable(){
 
 		var currentURL = window.location.origin;
-		$.ajax({url: currentURL + "/api/clear", method: "POST"})
+		$.ajax({url: currentURL + "/api/tables", method: "DELETE"})
+		.done(function (tables) {
+			console.log(tables)
+			if (tables.length === 0) {
+				$("#tableSection").empty();
+			}
+		})
 
-	}
+		$.ajax({url: currentURL + "/api/tables", method: "DELETE"})
+		.done(function (waitList) {
+			console.log(waitList)
+			if (waitList.length === 0) {
+				$("#waitlistSection").empty();
+			}
+		})
+		
+	};
 
 	$("#clear").on('click', function(){
 		alert("Clearing...");
 		clearTable();
 
-		// Refresh the page after data is cleared
-		location.reload();
 	})
 
 
