--- a/tables.html
+++ b/tables.html
@@ -154,7 +154,7 @@
 			}
 		})
 
-		$.ajax({url: currentURL + "/api/tables", method: "DELETE"})
+		$.ajax({url: currentURL + "/api/waitlist", method: "DELETE"})
 		.done(function (waitList) {
 			console.log(waitList)
 			if (waitList.length === 0) {
